--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -42,6 +42,11 @@
   padding: 10px;
 }
 
+.loginButton:disabled {
+  cursor: not-allowed;
+  background-color: rgb(255, 167, 167);
+}
+
 .loginRegisterButton {
   position: absolute;
   top: 60px;
