--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -20,6 +20,14 @@
   align-items: center;
 }
 
+
+.writeFormG{
+  margin-left: 150px;
+  display: flex;
+  align-items: center;
+}
+
+
 .writeIcon {
   width: 25px;
   height: 25px;
